# gcc-and-cmake-tasks

./: .gitignore  README.md
CMake Task1/: CMakeLists.txt
CMake-Task2/: CMakeLists.txt  main.cpp  validate_hardware_timestamp.cpp  validate_hardware_timestamp.h
subtask1/: main.cpp  mymath.cpp
subtask2/: mymath.h
